CI, release pipeline, CHANGELOG, consumer checks
- ci.yml: lint; macOS (Homebrew libsodium: suite on bb, JVM, nbb, library
  loading, WASM, Scittle in Chromium, suite against the installed jar);
  Linux (libsodium 1.0.22 from a pinned tarball, dynamically linked bb,
  same minus the browser). Jobs only call bb tasks.
- release.yml: on vX.Y.Z, release-check + tests, deploy to Clojars, then
  the whole suite against the jar fetched back from Clojars on the JVM,
  bb and nbb, then the GitHub release with the CHANGELOG section.
- bb test:jar / test:clojars (test/consumer/check.clj): the suite from a
  scratch project with no src/, asserting nacljc.core came from the jar.
- bb release-check: X.Y.Z only, CHANGELOG section required.
- build.clj: deploy via deps-deploy; pom tag and developerConnection.
- README: installation for deps.edn, bb.edn and nbb.edn.

Co-Authored-By: Claude Opus 5.5 (1M context) <noreply@anthropic.com>
Claude-Session: https://claude.ai/code/session_01BVvFQP9ZXLXVBqr63vHCyp